// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ui/lyrics displays a fallback message if the song has no lyrics 1`] = `
<article id="lyrics">
  <div class="content">
    <div style="display: none;">
      <div></div>
      <div class="text-zoomer"><button title="Zoom out"><i class="fa fa-search-minus"></i></button> <button title="Zoom in"><i class="fa fa-search-plus"></i></button></div>
    </div>
    <p class="none">No lyrics found. Are you not listening to Bach?</p>
  </div>
</article>
`;

exports[`components/ui/lyrics displays lyrics if the song has lyrics 1`] = `
<article id="lyrics">
  <div class="content">
    <div>
      <div>Foo and bar</div>
      <!---->
    </div>
    <!---->
  </div>
</article>
`;
